# ConsoleTextDecorator

./: CMakeLists.txt  README.md  main.cpp
include/: BackColor.h  BackColorDecorator.h  Color.h  ColorDecorator.h  Component.h  Decorator.h  ItalicDecorator.h  Text.h
src/: BackColorDecorator.cpp  ColorDecorator.cpp  Decorator.cpp  ItalicDecorator.cpp  Text.cpp
